Add Docker configuration and Digital Ocean deployment setup
- Add Dockerfile for backend (Spring Boot)
- Add Dockerfile for frontend (React/Vite with nginx)
- Add docker-compose.yml for local development
- Add .do/app.yaml for Digital Ocean App Platform
- Add GitHub Actions workflow for deployment
- Add .dockerignore files
- Update application.properties to support environment variables
- Add deployment documentation (DEPLOYMENT.md, QUICK_START.md)
- Update README.md with deployment instructions

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # ========================
 # PostgreSQL konekcija
 # ========================
-spring.datasource.url=jdbc:postgresql://localhost:5432/biozenapp
-spring.datasource.username=andrejdzakovic
-spring.datasource.password=
+# Može se override-ovati sa environment variables
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/biozenapp}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:andrejdzakovic}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ========================
@@ -22,8 +23,10 @@ spring.jpa.show-sql=true
 # ========================
 # JWT
 # ========================
-app.jwt.secret=change-this-secret-key-change-this-please-32chars-min
-app.jwt.ttlMillis=604800000
+# Može se override-ovati sa environment variable APP_JWT_SECRET
+app.jwt.secret=${APP_JWT_SECRET:change-this-secret-key-change-this-please-32chars-min}
+# Može se override-ovati sa environment variable APP_JWT_TTLMILLIS
+app.jwt.ttlMillis=${APP_JWT_TTLMILLIS:604800000}
 
 # ========================
 # Logging
