--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 # ========================
 # PostgreSQL konekcija
 # ========================
-# Može se override-ovati sa environment variables
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/biozenapp}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:andrejdzakovic}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:}
+# Digital Ocean daje DATABASE_URL u formatu: postgresql://user:pass@host:port/dbname
+# Spring Boot očekuje: jdbc:postgresql://host:port/dbname
+# Ako je DATABASE_URL setovan, koristi ga, inače koristi pojedinačne varijable
+spring.datasource.url=${SPRING_DATASOURCE_URL:${DATABASE_URL:jdbc:postgresql://localhost:5432/biozenapp}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${DB_USERNAME:andrejdzakovic}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${DB_PASSWORD:}}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Connection pool settings za production
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
 
 # ========================
 # JPA / Hibernate
@@ -33,3 +42,8 @@ app.jwt.ttlMillis=${APP_JWT_TTLMILLIS:604800000}
 # ========================
 logging.level.org.springframework=INFO
 logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.boot.autoconfigure=INFO
+
+# Health check
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=when-authorized
