--- a/app.yaml
+++ b/app.yaml
@@ -12,12 +12,13 @@ services:
     instance_count: 1
     instance_size_slug: basic-xxs
     envs:
-      # Digital Ocean daje DATABASE_URL u formatu: postgresql://user:pass@host:port/dbname
+      # Digital Ocean automatski setuje ${db.DATABASE_URL} u formatu: postgresql://user:pass@host:port/dbname
       # Spring Boot očekuje: jdbc:postgresql://host:port/dbname
-      # Koristimo pojedinačne varijable koje Digital Ocean automatski setuje
-      - key: SPRING_DATASOURCE_URL
+      # Koristimo direktno DATABASE_URL i parsiraćemo ga u application.properties
+      - key: DATABASE_URL
         scope: RUN_TIME
-        value: jdbc:postgresql://${db.HOSTNAME}:${db.PORT}/${db.DATABASE}
+        value: ${db.DATABASE_URL}
+      # Takođe setujemo pojedinačne varijable za direktan pristup
       - key: SPRING_DATASOURCE_USERNAME
         scope: RUN_TIME
         value: ${db.USERNAME}
