--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,11 +17,9 @@ server {
 
     # API proxy - prosleđuje zahteve na backend
     location /api {
-        set $backend_url http://backend:8080;
-        if ($http_x_backend_url) {
-            set $backend_url $http_x_backend_url;
-        }
-        proxy_pass $backend_url;
+        # Za docker-compose: koristi backend service name
+        # Za production: backend je na localhost:8080 (isti Docker network)
+        proxy_pass http://backend:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
