--- a/docker-compose-clean.yml
+++ b/docker-compose-clean.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   postgres:
     image: postgres:15-alpine
@@ -24,16 +26,13 @@ services:
       dockerfile: Dockerfile
     container_name: biozen-backend
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/biozenapp
-      SPRING_DATASOURCE_USERNAME: biozen
-      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-change-this-password}
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
+      SPRING_DATASOURCE_USERNAME: ${SPRING_DATASOURCE_USERNAME}
+      SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       APP_JWT_SECRET: ${JWT_SECRET:-change-this-secret-key-change-this-please-32chars-min}
       APP_JWT_TTLMILLIS: ${APP_JWT_TTLMILLIS:-604800000}
     ports:
       - "8080:8080"
-    depends_on:
-      postgres:
-        condition: service_healthy
     networks:
       - biozen-network
     restart: unless-stopped
@@ -57,3 +56,4 @@ volumes:
 networks:
   biozen-network:
     driver: bridge
+
