Fix nginx: forward Origin header to backend for CORS

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -27,6 +27,8 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        # VAŽNO: Prosleđuj Origin header da backend može da ga koristi
+        proxy_set_header Origin $http_origin;
         proxy_cache_bypass $http_upgrade;
         
         # CORS headers - prosleđuj backend CORS headere
