--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U biozen"]
+      test: ["CMD-SHELL", "pg_isready -U biozen -d biozenapp_dev"]
       interval: 10s
       timeout: 5s
       retries: 5
