--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -48,3 +48,17 @@ logging.level.org.springframework.boot.autoconfigure=INFO
 # Health check
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=when-authorized
+
+# ========================
+# Email Configuration
+# ========================
+spring.mail.host=mail.biozen.rs
+spring.mail.port=465
+spring.mail.username=no-reply@biozen.rs
+spring.mail.password=${MAIL_PASSWORD:kr4vAzivazdrava}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.ssl.required=true
+app.mail.from=no-reply@biozen.rs
+app.mail.from-name=BioZen Tracker
+app.frontend.url=${FRONTEND_URL:https://dev.biozen.rs}
