Add email timeout configuration and better error handling for forgot password

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -59,6 +59,10 @@ spring.mail.password=${MAIL_PASSWORD:kr4vAzivazdrava}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.smtp.ssl.required=true
+# Timeout settings to prevent long waits
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
 app.mail.from=no-reply@biozen.rs
 app.mail.from-name=BioZen Tracker
 app.frontend.url=${FRONTEND_URL:https://dev.biozen.rs}
