--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -53,12 +53,12 @@ management.endpoint.health.show-details=when-authorized
 # Email Configuration
 # ========================
 spring.mail.host=mail.biozen.rs
-spring.mail.port=465
+spring.mail.port=587
 spring.mail.username=no-reply@biozen.rs
 spring.mail.password=${MAIL_PASSWORD:kr4vAzivazdrava}
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
-spring.mail.properties.mail.smtp.ssl.required=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
 # Timeout settings to prevent long waits
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
