Temporarily use IP address for email server until DNS propagates

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,7 +52,8 @@ management.endpoint.health.show-details=when-authorized
 # ========================
 # Email Configuration
 # ========================
-spring.mail.host=mail.biozen.rs
+# Using IP address temporarily until DNS propagates (mail.biozen.rs should point to 116.202.246.212)
+spring.mail.host=116.202.246.212
 spring.mail.port=587
 spring.mail.username=no-reply@biozen.rs
 spring.mail.password=${MAIL_PASSWORD:kr4vAzivazdrava}
