Fix email SSL certificate issue: use hostname with extra_hosts mapping and disable strict SSL verification

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,14 +52,16 @@ management.endpoint.health.show-details=when-authorized
 # ========================
 # Email Configuration
 # ========================
-# Using IP address temporarily until DNS propagates (mail.biozen.rs should point to 116.202.246.212)
-spring.mail.host=116.202.246.212
+spring.mail.host=mail.biozen.rs
 spring.mail.port=587
 spring.mail.username=no-reply@biozen.rs
 spring.mail.password=${MAIL_PASSWORD:kr4vAzivazdrava}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+# SSL configuration - don't verify certificate strictly (temporary until DNS propagates)
+spring.mail.properties.mail.smtp.ssl.trust=*
+spring.mail.properties.mail.smtp.ssl.checkserveridentity=false
 # Timeout settings to prevent long waits
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
