--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -29,6 +29,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${POSTGRES_PASSWORD:-change-this-password}
       APP_JWT_SECRET: ${JWT_SECRET:-change-this-secret-key-change-this-please-32chars-min}
       APP_JWT_TTLMILLIS: ${APP_JWT_TTLMILLIS:-604800000}
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
     ports:
       - "8082:8080"
     extra_hosts:
