--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -15,6 +15,7 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${SPRING_DATASOURCE_PASSWORD}
       APP_JWT_SECRET: ${JWT_SECRET}
       APP_JWT_TTLMILLIS: ${APP_JWT_TTLMILLIS:-604800000}
+      OPENAI_API_KEY: ${OPENAI_API_KEY:-}
     ports:
       - "8080:8080"
     restart: unless-stopped
