--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,14 @@
+# HTTP server - redirect na HTTPS (ako SSL sertifikati postoje)
 server {
     listen 80;
-    server_name app.biozen.rs _;
+    server_name app.biozen.rs dev.biozen.rs _;
+    
+    # Ako SSL sertifikati postoje, redirect na HTTPS
+    # Ako ne postoje, serviraj HTTP (za development)
+    if (-f /etc/nginx/ssl/origin.crt) {
+        return 301 https://$host$request_uri;
+    }
+    
     root /usr/share/nginx/html;
     index index.html;
 
@@ -17,8 +25,6 @@ server {
 
     # API proxy - prosleđuje zahteve na backend
     location /api {
-        # Za docker-compose: koristi backend service name
-        # Za production: backend je na localhost:8080 (isti Docker network)
         proxy_pass http://backend:8080;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -27,13 +33,62 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        # VAŽNO: Prosleđuj Origin header da backend može da ga koristi
         proxy_set_header Origin $http_origin;
         proxy_cache_bypass $http_upgrade;
-        
-        # CORS headers - prosleđuj backend CORS headere
-        # Ne dodajemo CORS headere ovde jer backend već dodaje
-        # Samo prosleđujemo zahteve
+    }
+
+    # Cache static assets
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+}
+
+# HTTPS server (ako SSL sertifikati postoje)
+server {
+    listen 443 ssl http2;
+    server_name app.biozen.rs dev.biozen.rs _;
+    
+    # Ako SSL sertifikati ne postoje, ne pokreći HTTPS server
+    if (!-f /etc/nginx/ssl/origin.crt) {
+        return 444;
+    }
+    
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # SSL sertifikati
+    ssl_certificate /etc/nginx/ssl/origin.crt;
+    ssl_certificate_key /etc/nginx/ssl/origin.key;
+    
+    # SSL konfiguracija
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
+
+    # SPA routing - sve rute idu na index.html
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # API proxy - prosleđuje zahteve na backend
+    location /api {
+        proxy_pass http://backend:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Origin $http_origin;
+        proxy_cache_bypass $http_upgrade;
     }
 
     # Cache static assets
