--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -53,6 +53,9 @@ services:
       REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:8080}
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - ./ssl:/etc/nginx/ssl:ro  # Mount SSL sertifikata (ako postoje)
     depends_on:
       - backend
     restart: unless-stopped
