--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -68,4 +68,4 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 app.mail.from=no-reply@biozen.rs
 app.mail.from-name=BioZen Tracker
-app.frontend.url=${FRONTEND_URL:https://dev.biozen.rs}
+app.frontend.url=${FRONTEND_URL:https://app.biozen.rs}
